--- a/src/main/Main.module.css
+++ b/src/main/Main.module.css
@@ -3,6 +3,17 @@
     background-color: #ffd4f0;
 }
 
+.container {
+    border: 1px solid;
+    height: 100%;
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
 .text {
     width: 300px;
     background-color: #f7f7f7;
