--- a/src/header/Header.module.css
+++ b/src/header/Header.module.css
@@ -1,7 +1,11 @@
 .header {
-    height: 80px;
-    background-color: #99d0fb;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    height: 100%;
+}
+
+.wrapper {
+    height: 80px;
+    background-color: #99d0fb;
 }
