Container.tsx for all

--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,9 @@
 .App {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    /*color: #2F2E41;*/
+    line-height: 1.2;
+    letter-spacing: -0.02em;
+    min-width: 360px;
 }
