--- a/src/skills/Skills.module.css
+++ b/src/skills/Skills.module.css
@@ -3,11 +3,8 @@
     background-color: #d4ffc0;
 }
 
-.container {
-    border: 1px solid;
+.wrapper {
     height: 100%;
-    width: 80%;
-    margin: 0 auto;
     display: flex;
     align-items: center;
     flex-direction: column;
