--- a/src/container/Container.module.css
+++ b/src/container/Container.module.css
@@ -4,5 +4,7 @@
     padding: 0 15px;
     margin: 0 auto;
     height: 100%;
-    border: 1px solid;
+    border-left: 1px solid;
+    border-right: 1px solid;
+    border-bottom: 1px solid;
 }
