--- a/src/skills/skill/Skill.module.css
+++ b/src/skills/skill/Skill.module.css
@@ -1,15 +1,35 @@
 .skill {
-    width: 250px;
-    background-color: #f7f7f7;
+    border: 2px solid #E7E7E7;
+    border-radius: 5px;
+    width: 330px;
+    padding: 20px;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
-    flex-wrap: wrap;
+    box-shadow: 0 0 10px 1px #E7E7E7;
+    background: #FFFFFF;
 }
 
 .icon {
     height: 60px;
     width: 60px;
     background-color: #eeeef5;
+    border: 5px solid #E7E7E7;
+    border-radius: 9px;
+}
+
+.skill h3 {
+    font-weight: 700;
+    font-size: 22px;
+    text-align: center;
+    text-transform: uppercase;
+    cursor: default;
+    margin: 20px 0;
+}
+
+.skill p {
+    text-align: justify;
+    line-height: 1.4;
+    cursor: default;
 }
