--- a/src/skills/Skills.module.css
+++ b/src/skills/Skills.module.css
@@ -30,3 +30,17 @@
     flex-wrap: wrap;
     gap: 15px
 }
+
+@media screen and (max-width: 768px) {
+    .skillsBlock {
+        height: 100%;
+        background-color: #d4ffc0;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .skillsBlock {
+        height: 100%;
+        background-color: #d4ffc0;
+    }
+}
