--- a/src/skills/Skills.module.css
+++ b/src/skills/Skills.module.css
@@ -1,5 +1,5 @@
 .skillsBlock {
-    height: 100vh;
+    /*height: 100vh;*/
     background-color: #d4ffc0;
 }
 
@@ -28,19 +28,17 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: 15px
+    gap: 15px;
+    margin-bottom: 30px;
 }
 
 @media screen and (max-width: 768px) {
     .skillsBlock {
         height: 100%;
-        background-color: #d4ffc0;
     }
 }
 
 @media screen and (max-width: 576px) {
     .skillsBlock {
-        height: 100%;
-        background-color: #d4ffc0;
     }
 }
