--- a/src/projects/project/Project.module.css
+++ b/src/projects/project/Project.module.css
@@ -1,12 +1,40 @@
 .project {
     border: 2px solid #E7E7E7;
     border-radius: 5px;
-    width: 330px;
+    width: 450px;
     padding: 20px;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     box-shadow: 0 0 10px 1px #E7E7E7;
     background: #FFFFFF;
+}
+
+.photo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 300px;
+    background-color: #eeeef5;
+    border: 3px solid #E7E7E7;
+    border-radius: 9px;
+}
+
+.project h3 {
+    font-weight: 600;
+    font-size: 20px;
+    /*color: #f1e2ff;*/
+    cursor: default;
+    margin: 20px 0;
+}
+
+.project p {
+    cursor: default;
+    background-color: #f1e2ff;
+    padding: 10px;
+    text-align: justify;
+    line-height: 1.4;
+    border-radius: 9px;
 }
