--- a/src/projects/project/Project.module.css
+++ b/src/projects/project/Project.module.css
@@ -9,6 +9,7 @@
     align-items: flex-start;
     box-shadow: 0 0 10px 1px #E7E7E7;
     background: #FFFFFF;
+    /*position: relative;*/
 }
 
 .photo {
@@ -20,6 +21,32 @@
     background-color: #eeeef5;
     border: 3px solid #E7E7E7;
     border-radius: 9px;
+    position: relative;
+    transition: 0.5s;
+}
+
+.btn {
+    opacity: 0;
+    position: absolute;
+    background-color: #555;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align: center;
+    transition: 0.5s;
+}
+
+.photo:hover {
+    background-color: #f1e2ff;
+    border: 3px solid #f1e2ff;
+}
+
+.photo:hover .btn {
+    opacity: 1;
+    background-color: black;
 }
 
 .project h3 {
