--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -1,9 +1,75 @@
 .contactsBlock {
-    height: 100%;
+    /*height: 100%;*/
     background-color: #ffe2e2;
-    user-select: none;
 }
 
 .wrapper {
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title {
+    background-color: #f7f7f7;
+    font-weight: 700;
+    font-size: 44px;
+    text-transform: uppercase;
+    text-align: center;
+    margin: 70px 0;
+    user-select: none;
+    padding: 5px;
+    border-radius: 9px;
+}
+
+.contactsBlock form {
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    margin: 0 auto 30px;
+}
+
+.contactsBlock label {
+    margin-bottom: 0.5rem;
+    font-weight: bold;
+}
+
+.contactsBlock input,
+textarea {
+    padding: 0.5rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    margin-bottom: 1rem;
+}
+
+.contactsBlock input:focus,
+textarea:focus {
+    outline: none;
+    border-color: blue;
+}
+
+.contactsBlock button {
+    background-color: black;
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 1rem;
+}
+
+.contactsBlock button:hover {
+    background-color: #3d3d3d;
+}
+
+@media screen and (max-width: 768px) {
+    .contactsBlock form {
+        width: 450px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .contactsBlock form {
+        width: 300px;
+    }
 }
