--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -40,12 +40,18 @@ textarea {
     border-radius: 5px;
     border: 1px solid #ccc;
     margin-bottom: 1rem;
+    resize: none;
+}
+
+.contactsBlock textarea {
+    resize: none;
+    height: 150px;
 }
 
 .contactsBlock input:focus,
 textarea:focus {
     outline: none;
-    border-color: blue;
+    border-color: black;
 }
 
 .contactsBlock button {
