--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -9,31 +9,27 @@
     align-items: center;
 }
 
-.title {
-    font-weight: 700;
-    font-size: 30px;
-    text-transform: uppercase;
-    text-align: center;
-    margin: 30px 0;
-    user-select: none;
-}
-
 .footerNav {
     display: flex;
     justify-content: center;
-    border: 2px solid #E7E7E7;
+    gap: 15px;
+    /*border: 2px solid #E7E7E7;*/
     border-radius: 5px;
-    width: 95%;
-    padding: 20px;
+    width: 100%;
+    /*padding: 15px 0;*/
     flex-grow: 1;
-    box-shadow: 0 0 10px 1px #E7E7E7;
-    background: #FFFFFF;
+    /*box-shadow: 0 0 10px 1px #E7E7E7;*/
+    /*background: #FFFFFF;*/
 }
 
 .navItem {
-    height: 60px;
+    height: 30px;
     width: 60px;
     background-color: #eeeef5;
     border: 5px solid #E7E7E7;
     border-radius: 9px;
+}
+
+.footer p {
+
 }
