--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -11,25 +11,25 @@
 
 .footerNav {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     gap: 15px;
-    /*border: 2px solid #E7E7E7;*/
     border-radius: 5px;
     width: 100%;
-    /*padding: 15px 0;*/
     flex-grow: 1;
-    /*box-shadow: 0 0 10px 1px #E7E7E7;*/
-    /*background: #FFFFFF;*/
 }
 
 .navItem {
-    height: 30px;
-    width: 60px;
+    height: 40px;
+    width: 150px;
     background-color: #eeeef5;
     border: 5px solid #E7E7E7;
     border-radius: 9px;
+    margin: 20px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer p {
-
+    margin-bottom: 15px;
 }
