--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -11,11 +11,12 @@
 
 .footerNav {
     display: flex;
-    justify-content: space-evenly;
-    gap: 15px;
+    gap: 20px;
     border-radius: 5px;
-    width: 100%;
+    /*width: 100%;*/
     flex-grow: 1;
+    margin: 50px 0;
+    flex-wrap: wrap;
 }
 
 .navItem {
@@ -24,12 +25,45 @@
     background-color: #eeeef5;
     border: 5px solid #E7E7E7;
     border-radius: 9px;
-    margin: 20px 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
+    transition: 0.5s;
+    flex: 20%;
 }
 
-.footer p {
-    margin-bottom: 15px;
+.navItem:hover {
+    background-color: #000000;
+    border: 5px solid #000000;
+    color: #FFFFFF;
+    transform: scale(1.1);
+}
+
+.copyright {
+    display: flex;
+    justify-content: center;
+    padding: 15px 0;
+    border-top: 1px solid #ffe2e2;
+}
+
+.copyright a {
+    color: #000000;
+    text-decoration: none;
+}
+
+.copyright a:hover {
+    text-decoration: underline;
+}
+
+@media screen and (max-width: 768px) {
+    .navItem {
+        flex: 50%;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .navItem {
+        flex: 100%;
+    }
 }
