--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -58,14 +58,16 @@ textarea:focus {
     background-color: black;
     color: white;
     border: none;
-    padding: 0.5rem 1rem;
+    padding: 0.75rem 1rem;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
+    transition: 0.5s;
 }
 
 .contactsBlock button:hover {
     background-color: #3d3d3d;
+    transform: scale(1.01);
 }
 
 @media screen and (max-width: 768px) {
