--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,11 +1,11 @@
 .mainBlock {
-    height: 100vh;
+    /*height: 100vh;*/
     background-color: #ffd4f0;
     user-select: none;
 }
 
 .wrapper {
-    height: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: space-between;
