--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,11 +1,11 @@
 .header {
-    height: 80px;
+    /*height: 80px;*/
     background-color: #99d0fb;
 }
 
 .wrapper {
+    height: 80px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    height: 100%;
 }
