--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,10 +1,14 @@
 .header {
-    /*height: 80px;*/
     background-color: #99d0fb;
+    position: fixed;
+    width: 100%;
+    color: #fff;
+    text-align: center;
+    z-index: 1;
 }
 
 .wrapper {
-    height: 80px;
+    height: 70px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
