--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,5 +1,4 @@
 .mainBlock {
-    /*height: 100vh;*/
     background-color: #ffd4f0;
     user-select: none;
 }
@@ -7,6 +6,7 @@
 .wrapper {
     height: 100vh;
     display: flex;
+    flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -26,28 +26,37 @@
 }
 
 .photo {
-    width: 300px;
-    height: 400px;
+    width: 350px;
+    height: 350px;
     background-color: #f7f7f7;
-    border-radius: 9px;
+    border-radius: 50%;
+    border: 10px solid #E7E7E7;
 }
 
 @media screen and (max-width: 768px) {
     .wrapper {
-        display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+    .photo {
+        width: 300px;
+        height: 300px;
     }
 }
 
 @media screen and (max-width: 576px) {
     .wrapper {
-        display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+    .photo {
+        width: 300px;
+        height: 300px;
+    }
+    .text {
+        width: 300px;
+    }
+    .text h1 {
+        font-size: 20px;
     }
 }
