--- a/src/components/Projects/Project/Project.module.css
+++ b/src/components/Projects/Project/Project.module.css
@@ -19,9 +19,11 @@
     width: 100%;
     height: 300px;
     background-color: #eeeef5;
-    border: 3px solid #E7E7E7;
+    border: none;
     border-radius: 9px;
     position: relative;
+    background-size: cover;
+    background-position: center;
     transition: 0.5s;
 }
 
@@ -40,19 +42,19 @@
 }
 
 .photo:hover {
-    background-color: #f1e2ff;
-    border: 3px solid #f1e2ff;
+    background-color: rgba(0, 0, 0, 0.3);
+    background-blend-mode: multiply;
 }
 
 .photo:hover .btn {
     opacity: 1;
-    background-color: black;
+    background-color: #d4ffc0;
+    color: #000000;
 }
 
 .project h3 {
     font-weight: 600;
     font-size: 20px;
-    /*color: #f1e2ff;*/
     cursor: default;
     margin: 20px 0;
 }
