--- a/src/components/Skills/Skill/Skill.module.css
+++ b/src/components/Skills/Skill/Skill.module.css
@@ -1,7 +1,7 @@
 .skill {
     border: 2px solid #E7E7E7;
     border-radius: 5px;
-    width: 330px;
+    max-width: 370px;
     padding: 20px;
     flex-grow: 1;
     display: flex;
@@ -32,4 +32,16 @@
     text-align: justify;
     line-height: 1.4;
     cursor: default;
+}
+
+@media screen and (max-width: 1170px) {
+    .skill {
+        max-width: calc(50% - 15px);
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .skill {
+        max-width: 100%;
+    }
 }
