--- a/src/components/Projects/Project/Project.module.css
+++ b/src/components/Projects/Project/Project.module.css
@@ -1,7 +1,7 @@
 .project {
     border: 2px solid #E7E7E7;
     border-radius: 5px;
-    width: 450px;
+    max-width: calc(50% - 15px);
     padding: 20px;
     flex-grow: 1;
     display: flex;
@@ -78,4 +78,16 @@
     text-align: justify;
     line-height: 1.4;
     border-radius: 9px;
+}
+
+@media screen and (max-width: 1170px) {
+    .project {
+        max-width: calc(50% - 15px);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .project {
+        max-width: 100%;
+    }
 }
