--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -17,7 +17,7 @@
     position: absolute;
     text-align: center;
     width: 32px;
-    z-index: 3;
+    /*z-index: 3;*/
     opacity: 0;
     animation: blink 3s infinite;
 }
