--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -7,7 +7,11 @@
     border-radius: 9px;
 }
 
-.nav a {
+.link {
     color: #000000;
     text-decoration: none;
+}
+
+.active {
+    color: red;
 }
