--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -28,14 +28,39 @@
     color: #000000;
 }
 
-@media screen and (max-width: 768px) {
-    .wrapper {
-        height: 60px;
+.icons {
+    display: flex;
+    gap: 15px;
+    position: relative;
+}
+
+.mobileMenuButton {
+    display: none;
+}
+
+.mobileMenu {
+    position: absolute;
+    background-color: #FFFFFF;
+    width: 80%;
+    z-index: 1;
+    top: calc(50% - -125px);
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 15px;
+    box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 991px) {
+    .mainMenu {
+        display: none;
+    }
+    .mobileMenuButton {
+        display: block;
     }
 }
 
-@media screen and (max-width: 576px) {
-    .wrapper {
-        height: 60px;
+@media (max-width: 575px) {
+    .mobileMenu {
+        width: 100%;
     }
 }
