--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -13,6 +13,13 @@
 }
 
 @font-face {
+    font-family: 'Poppins-ExtraLigh';
+    src: url('/src/assets/fonts/Poppins/Poppins-ExtraLight.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
     font-family: 'Poppins-SemiBold';
     src: url('/src/assets/fonts/Poppins/Poppins-SemiBold.ttf');
     font-weight: normal;
