--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -5,3 +5,15 @@
     margin: 0 auto;
     height: 100%;
 }
+
+@media screen and (max-width: 1399px) {
+    .container {
+        max-width: 1140px;
+    }
+}
+
+@media screen and (max-width: 1199px) {
+    .container {
+        max-width: 960px;
+    }
+}
