--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -37,7 +37,7 @@
 }
 
 .wrapper {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
@@ -113,8 +113,9 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 50px;
+        gap: 45px;
         padding-top: 50px;
+        /*margin-bottom: 50px;*/
     }
     .photo {
         width: 455px;
