--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -13,7 +13,7 @@
 }
 
 @font-face {
-    font-family: 'Poppins-ExtraLigh';
+    font-family: 'Poppins-ExtraLight';
     src: url('/src/assets/fonts/Poppins/Poppins-ExtraLight.ttf');
     font-weight: normal;
     font-style: normal;
