--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -52,7 +52,7 @@
 }
 
 .text h1 {
-    font-family: 'Poppins-ExtraLigh', 'Golos_Text', sans-serif;
+    font-family: 'Poppins-ExtraLight', 'Golos_Text', sans-serif;
     font-size: 42px;
     text-transform: uppercase;
 }
