--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -1,5 +1,5 @@
 .skillsBlock {
-    background-color: #d4ffc0;
+    background-color: #ffffff;
 }
 
 .wrapper {
@@ -8,25 +8,29 @@
     align-items: center;
     flex-direction: column;
     justify-content: flex-start;
+    padding: 100px 0;
+}
+.title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.title {
-    background-color: #f7f7f7;
-    font-weight: 700;
-    font-size: 44px;
-    text-transform: uppercase;
-    text-align: center;
-    margin: 70px 0;
-    user-select: none;
-    padding: 5px;
-    border-radius: 9px;
+.title h2{
+    font-size: 40px;
+    margin: 15px 0 48px;
+}
+.title h3{
+    background-color: #f5df4f;
+    padding: 0 8px;
+    font-weight: lighter;
+    font-size: 15px;
 }
 
 .skills {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 15px;
-    margin-bottom: 30px;
 }
 
 @media screen and (max-width: 990px) {
