--- a/src/components/Skills/Skill/Skill.module.css
+++ b/src/components/Skills/Skill/Skill.module.css
@@ -1,30 +1,33 @@
 .skill {
-    border: 2px solid #E7E7E7;
-    border-radius: 5px;
-    /*max-width: 500px;*/
+    width: 260px;
     padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 0 0 10px 1px #E7E7E7;
-    background: #FFFFFF;
+    transition: 0.5s;
+}
+
+.skill:hover {
+    background-color: #f5df50;
+    border-radius: 5px;
+}
+.skill:hover .icon{
+    color: white;
+    transform: scale(1.1);
 }
 
 .icon {
-    height: 60px;
-    width: 60px;
-    background-color: #eeeef5;
-    border: 5px solid #E7E7E7;
-    border-radius: 9px;
+    color: #f5df50;
+    font-size: 70px;
+    transition: 0.5s;
 }
 
 .skill h3 {
     font-weight: 700;
     font-size: 22px;
     text-align: center;
-    text-transform: uppercase;
     cursor: default;
-    margin: 20px 0;
+    margin-top: 20px;
 }
 
 .skill p {
