--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 
 .title h2{
@@ -33,14 +34,23 @@
     gap: 15px;
 }
 
-@media screen and (max-width: 990px) {
+@media screen and (max-width: 991px) {
     .skills {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 767px) {
     .skills {
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .title h2{
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .title h2{
+        font-size: 26px;
     }
 }
