--- a/src/components/Projects/Project/Project.module.css
+++ b/src/components/Projects/Project/Project.module.css
@@ -1,41 +1,28 @@
 .project {
     border: 2px solid #E7E7E7;
-    border-radius: 5px;
-    padding: 20px;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     box-shadow: 0 0 10px 1px #E7E7E7;
     background: #FFFFFF;
+    overflow: hidden;
 }
 
 .photo {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 300px;
+    cursor: pointer;
     background-color: #eeeef5;
     border: none;
-    border-radius: 9px;
     position: relative;
     background-size: cover;
     background-position: center;
-    transition: all 0.3s ease-in-out;
-}
-
-.btn {
-    opacity: 0;
-    position: absolute;
-    background-color: #555;
-    color: white;
-    font-size: 16px;
-    padding: 12px 24px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    text-align: center;
-    transition: all 0.3s ease-in-out;
+    transition: all .8s cubic-bezier(0.42, 0, 0.58, 1);
 }
 
 .photo:before {
@@ -51,27 +38,52 @@
     transition: all 0.5s ease-out;
 }
 
+.photo:hover {
+    transform: scale(1.05);
+}
+
 .photo:hover::before {
     opacity: 1;
 }
 
 .photo:hover .btn {
     opacity: 1;
-    background-color: #d4ffc0;
+    background-color: #f5df50;
     color: #000000;
+}
+
+.photoWrapper {
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+}
+
+.btn {
+    opacity: 0;
+    position: absolute;
+    background-color: #555;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align: center;
+    transition: all 0.8s ease-in-out;
+}
+
+.text {
+    padding: 20px;
 }
 
 .project h3 {
     font-weight: 600;
     font-size: 20px;
-    cursor: default;
-    margin: 20px 0;
+    margin-bottom: 20px;
 }
 
 .project p {
-    cursor: default;
-    background-color: #f1e2ff;
-    padding: 10px;
+    color: rgba(0, 0, 0, 0.5);
     text-align: justify;
     line-height: 1.4;
     border-radius: 9px;
