Contacts custom mobile

--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -9,7 +9,7 @@
     gap: 50px;
 }
 
-.getInTouch h2{
+.getInTouch h2 {
     font-size: 40px;
 }
 
@@ -19,11 +19,15 @@
     line-height: 1.8;
 }
 
-.icons{
+.icons {
     padding-top: 10px;
 }
 
-.form h2{
+.form {
+    margin-right: 20px;
+}
+
+.form h2 {
     font-size: 40px;
     padding-bottom: 30px;
 }
@@ -32,20 +36,23 @@
     display: flex;
     flex-direction: column;
     margin: 0 auto 30px;
+    font-size: 18px;
 }
 
 .contactsBlock label {
     margin-bottom: 0.5rem;
-    font-weight: bold;
 }
 
 .contactsBlock input,
 textarea {
-    padding: 0.5rem;
-    border-radius: 5px;
-    border: 1px solid #ccc;
+    padding: 0.5rem 0;
+    border: none;
+    border-bottom: 2px solid #d7c446;
     margin-bottom: 1rem;
     resize: none;
+    background-color: transparent;
+    font-size: 22px;
+    transition: 0.3s ease-in-out;
 }
 
 .contactsBlock textarea {
@@ -60,19 +67,20 @@ textarea:focus {
 }
 
 .contactsBlock button {
+    width: 150px;
     background-color: black;
     color: white;
     border: none;
     padding: 0.75rem 1rem;
-    border-radius: 5px;
     cursor: pointer;
     margin-top: 0.5rem;
     transition: 0.5s;
+    font-family: 'Poppins-Regular', 'Golos', sans-serif;
+    font-size: 16px;
 }
 
 .contactsBlock button:hover {
     background-color: #3d3d3d;
-    transform: scale(1.01);
 }
 
 @media screen and (max-width: 575px) {
@@ -80,16 +88,33 @@ textarea:focus {
         background-color: #f5df4f;
         padding: 50px 0;
     }
+
     .wrapper {
         grid-template-columns: repeat(1, 1fr);
     }
-    .getInTouch h2{
+
+    .getInTouch h2 {
         font-size: 30px;
     }
+
     .getInTouch p {
         font-size: 16px;
     }
-    .form h2{
+
+    .form h2 {
         font-size: 30px;
+    }
+
+    .contactsBlock form {
+        font-size: 16px;
+    }
+
+    .contactsBlock input,
+    textarea {
+        font-size: 18px;
+    }
+
+    .contactsBlock button {
+        width: 100%;
     }
 }
