--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -101,6 +101,10 @@ textarea:focus {
         font-size: 16px;
     }
 
+    .form {
+        margin-right: 0;
+    }
+
     .form h2 {
         font-size: 30px;
     }
