--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -44,6 +44,10 @@
 }
 
 @media screen and (max-width: 575px) {
+    .wrapper {
+        padding: 50px 0;
+    }
+
     .projects {
         grid-template-columns: repeat(1, 1fr);
     }
