--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,71 +1,28 @@
 .footer {
-    background-color: #ebffe4;
+    background-color: #020202;
 }
 
 .wrapper {
-    height: 100%;
+    height: 70px;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-}
-
-.footerNav {
-    display: flex;
-    gap: 20px;
-    border-radius: 5px;
-    /*width: 100%;*/
-    flex-grow: 1;
-    margin: 50px 0;
-    flex-wrap: wrap;
-}
-
-.navItem {
-    height: 40px;
-    width: 200px;
-    background-color: #eeeef5;
-    border: 5px solid #E7E7E7;
-    border-radius: 9px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    transition: 0.5s;
-    flex: 20%;
-}
-
-.navItem:hover {
-    background-color: #000000;
-    border: 5px solid #000000;
     color: #FFFFFF;
-    transform: scale(1.05);
-}
-
-.copyright {
-    display: flex;
-    justify-content: center;
-    padding: 15px 0;
-    border-top: 1px solid #ffe2e2;
 }
 
 .copyright a {
-    color: #000000;
-    text-decoration: none;
-}
-
-.copyright a:hover {
+    color: #f5df4f;
     text-decoration: underline;
 }
 
-@media screen and (max-width: 768px) {
-    .navItem {
-        width: 150px;
-        flex: 40%;
-    }
+.copyright a:hover {
+    text-decoration: none;
 }
 
-@media screen and (max-width: 576px) {
-    .navItem {
-        width: 90px;
-        flex: 40%;
+
+@media screen and (max-width: 575px) {
+    .wrapper {
+        flex-direction: column;
+        justify-content: space-evenly;
     }
 }
