--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -3,13 +3,14 @@
 }
 
 .wrapper {
-    height: 100%;
+    min-height: calc(100vh - 70px);
     display: flex;
-    align-items: center;
     flex-direction: column;
-    justify-content: flex-start;
+    align-items: center;
+    justify-content: space-evenly;
     padding: 100px 0;
 }
+
 .title {
     display: flex;
     flex-direction: column;
