--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    text-align: center;
     color: #FFFFFF;
 }
 
@@ -19,10 +20,18 @@
     text-decoration: none;
 }
 
+.status {
+    display: block;
+}
+
 
 @media screen and (max-width: 575px) {
     .wrapper {
         flex-direction: column;
         justify-content: space-evenly;
+    }
+
+    .status {
+        display: none;
     }
 }
