--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -124,3 +124,22 @@ textarea:focus {
         width: 100%;
     }
 }
+.contactsBlock ::-webkit-scrollbar-thumb {
+    background-color: #f5df50;
+    border-radius: 5px;
+    border: 2px solid #2a2828;
+}
+
+.contactsBlock ::-webkit-scrollbar-thumb:hover {
+    border: none;
+    background-color: #f5df50;
+}
+
+.contactsBlock ::-webkit-scrollbar-thumb:active {
+    background-color: #f5df50;
+}
+
+.contactsBlock ::-webkit-scrollbar-track {
+    background-color: #2a2828;
+    border-radius: 5px;
+}
