--- a/src/components/Projects/Project/Project.module.scss
+++ b/src/components/Projects/Project/Project.module.scss
@@ -50,16 +50,14 @@
 
         .btn {
           opacity: 1;
-          background-color: #f5df50;
-          color: #000000;
         }
       }
 
       .btn {
         opacity: 0;
         position: absolute;
-        background-color: #555;
-        color: white;
+        background-color: #f5df50;
+        color: #000000;
         font-size: 16px;
         padding: 12px 24px;
         border: none;
@@ -75,9 +73,11 @@
     padding: 20px;
 
     h3 {
+      display: inline-block;
       font-weight: 600;
       font-size: 20px;
       margin-bottom: 20px;
+      cursor: pointer;
     }
 
     p {
