--- a/src/components/Projects/Project/Project.module.scss
+++ b/src/components/Projects/Project/Project.module.scss
@@ -7,6 +7,7 @@
   box-shadow: 0 0 10px 1px #E7E7E7;
   background: #FFFFFF;
   overflow: hidden;
+  position: relative;
 
   .photoWrapper {
     width: 100%;
@@ -85,6 +86,34 @@
       text-align: justify;
       line-height: 1.4;
       border-radius: 9px;
+    }
+  }
+
+  .btnView {
+    position: absolute;
+    width: 100%;
+    opacity: 0;
+    bottom: 0;
+
+    button {
+      width: 100%;
+      background-color: #f5df50;
+      color: black;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+      font-family: 'Poppins-Regular', 'Golos_Text', sans-serif;
+      font-size: 16px;
+    }
+
+    @media screen and (max-width: 1199px) {
+      opacity: 1;
+    }
+  }
+
+  @media screen and (max-width: 1199px) {
+    .text {
+      padding: 20px 20px 60px;
     }
   }
 }
