Project button color fix

--- a/src/components/Projects/Project/Project.module.scss
+++ b/src/components/Projects/Project/Project.module.scss
@@ -97,8 +97,8 @@
 
     button {
       width: 100%;
-      background-color: #f5df50;
-      color: black;
+      background-color: #212529;
+      color: #ffffff;
       border: none;
       padding: 10px;
       cursor: pointer;
