--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -1,5 +1,8 @@
+@import "../../common/styles/variables";
+
 .projectsBlock {
-  background-color: #f8f9fa;
+  background-color: var(#{--bgSecondaryDefault});
+  color: var(#{--textDefault});
 
   .wrapper {
     height: 100%;
