--- a/src/components/Header/SocialIcons/SocialIcons.module.scss
+++ b/src/components/Header/SocialIcons/SocialIcons.module.scss
@@ -9,8 +9,7 @@
 
     .cd, .tg, .git, .link {
       font-size: 20px;
-      //color: #4d555a;
-      color: var(#{--textDefault});
+      color: var(#{--iconsDefault});
       transition: .2s ease-in-out;
 
       &:hover {
