--- a/src/components/Projects/Project/Project.module.scss
+++ b/src/components/Projects/Project/Project.module.scss
@@ -100,7 +100,7 @@
 
     button {
       width: 100%;
-      background-color: #212529;
+      background-color: var(#{--buttonsDefault});
       color: #ffffff;
       border: none;
       padding: 10px;
